Cross compiler and stuff is good and crispy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,14 @@ cmake_minimum_required (VERSION 3.1)
 set (PROJECT_NAME "octopOS")
 project (${PROJECT_NAME})
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall -O0 -fprofile-arcs -ftest-coverage")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++11 -g -Wall -O0 -fprofile-arcs -ftest-coverage")
+if (CMAKE_BUILD_TYPE EQUAL "RELEASE")
+        EXECUTE_PROCESS( COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTURE )
+        if( ${ARCHITECTURE} STREQUAL "64Bit" )
+                set(CMAKE_CXX_COMPILER "arm-linux-gnueabihf-g++")
+        else()
+        endif()
+endif (CMAKE_BUILD_TYPE EQUAL "RELEASE")
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
