Start work on cross comp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,17 @@ set (PROJECT_NAME "octopOS")
 project (${PROJECT_NAME})
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++11 -g -Wall -O0 -fprofile-arcs -ftest-coverage")
-if (CMAKE_BUILD_TYPE EQUAL "RELEASE")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11 -Wall -O2")
+if (CMAKE_BUILD_TYPE EQUAL "Release")
         EXECUTE_PROCESS( COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTURE )
-        if( ${ARCHITECTURE} STREQUAL "64Bit" )
+        if( ${ARCHITECTURE} STREQUAL "x86_64" )
+                message("Hey there Vrinda this is release + x86")
                 set(CMAKE_CXX_COMPILER "arm-linux-gnueabihf-g++")
         else()
         endif()
-endif (CMAKE_BUILD_TYPE EQUAL "RELEASE")
+else()
+        message("Hey there Vrinda this is debug")
+endif (CMAKE_BUILD_TYPE EQUAL "Release")
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
